--- a/Bone/Bone.html
+++ b/Bone/Bone.html
@@ -2,18 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Bone</title>
 </head>
 
 <body>
-<h2>Bone</h2>
 <img src="Bone1.jpg"> <br>
-Series: on-going<br>
-Illustrator: Jeff Smith<br>
-Writer: Jeff Smith<br>
-Publisher: 1991 Cartoon Books, Image<br>
+55 issues 1991 by Cartoon Books and Image<br>
+Created by Jeff Smith
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Bone1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bone2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bone3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bone4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bone5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bone6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bone7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bone8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bone9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bone10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Bone is an independently published comic book series, written and illustrated by Jeff Smith, originally serialized in 55 irregularly released issues from 1991 to 2004.
 </p><p>
 Bone has received numerous awards, among them ten Eisner Awards and eleven Harvey Awards. Bone #1 (first printing 1991) has a market value of $2000 by 2017.
