--- a/BooksOfMagic/BooksOfMagic.html
+++ b/BooksOfMagic/BooksOfMagic.html
@@ -2,18 +2,51 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Books Of Magic</title>
 </head>
 
 <body>
-<h2>Books Of Magic</h2>
-<img src="BooksOfMagic1991.jpg"> 
-<img src="BooksOfMagic1994.jpg"> <br>
-Series: on-going. Started as a 4 issue mini series in 1991, then a collection, then returned in 1994 to 2000 under Vertigo for 75 issues, which was also published as a collection.<br>
-Publisher: 1990, 1994 DC, Vertigo<br>
+<img src="BooksOfMagic1990_1.jpg"><br>
+4 issues 1990, 1 collection TPB 1993, 75 issues 1994-2000 by Vertigo (DC)<br>
 Writer: Neil Gaiman<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1990_1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1990_2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1990_3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1990_4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1993.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1994_13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1997_1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1997_2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagic1997_3.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 What would you do if you were told you could be the world's greatest enchanter if you chose to walk the path of magic? Young Timothy Hunter has accepted this challenge. Enter "The Invisible Labyrinth" as we meet Tim, whom the Phantom Stranger leads through Earth's magical past to encounter Merlin, Zatara, Sargon the Sorcerer and others. Painted artwork and cover by John Bolton.
 </p><p>
 Tim Hunter's journey through the magical realm of the DC Universe continues as the boy destined to become the next great sorcerer joins HELLBLAZER's John Constantine on a tour of the present where they will encounter the Spectre, Doctor Fate, Zatanna and others. Painted artwork and cover by Scott Hampton.
