--- a/BooksOfMagicLifeWartime/BooksOfMagicLifeWartime.html
+++ b/BooksOfMagicLifeWartime/BooksOfMagicLifeWartime.html
@@ -2,19 +2,47 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Books Of Magic Life During Wartime</title>
 </head>
 
 <body>
-<h2>Books Of Magic Life During Wartime</h2>
-<img src="BooksOfMagicLifeWartime.jpg"> <br>
-Series: on-going, 15 issues<br>
+<img src="BooksOfMagicLifeWartime1.jpg"> <br>
+15 issues 2004 Vertigo (DC)<br>
 Illustrator: Dean Ormston<br>
 Cover: Frank Quitely
 Writer: Si Spencer<br>
-Publisher: 2004 Vertigo<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BooksOfMagicLifeWartime15.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 Neil Gaiman's original character Timothy Hunter is back in a new series co-plotted by Gaiman and British television writer Si Spencer. 
 </p><p>
 Ten minutes into the future, set in alternative universes where battles on Earth and Faerie overlap, this new take on 19-year-old Tim is loaded with dark, dystopian undercurrents and deep psychological horror.
