--- a/BratPack/BratPack.html
+++ b/BratPack/BratPack.html
@@ -9,10 +9,9 @@
 
 <body>
 <img src="BratPack1.jpg" title="Brat Pack"> <br>
-Series: 5 issues 1990 - 1991, 2 issue special 1996 - 1997<br>
-Publisher: King Hell<br>
-Created by Rick Veitch<br>
-</p><p>
+5 issues 1990 - 1991, 2 issue special 1996 - 1997 by King Hell<br>
+Created by Rick Veitch
+<p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
