--- a/BrandEchh/BrandEchh.html
+++ b/BrandEchh/BrandEchh.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Not Brand Echh</h2>
 <img src="BrandEchh.jpg"> <br>
-Series: 13 issues 1967-1969, one-offs 2014, 2017<br>
-Publisher: 1967 Marvel<br>
+13 issues 1967-1969, one-offs 2014, 2017 by Marvel
 <p>
 Issues: Indica on #1 thru 4 is 'Brand Echh'. Indica changes to 'Not Brand Echh' with issue #5.
 </p><p>
