--- a/BratsBizarre/BratsBizarre.html
+++ b/BratsBizarre/BratsBizarre.html
@@ -2,18 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Brats Bizarre</title>
 </head>
 
 <body>
-<h2>Brats Bizarre</h2>
-<img src="BratsBizarre.jpg"> <br>
-Series: 4 issue mini series<br>
-Illustrator: Duke Mighten, Anthony Adhikary, Paul Scott, Colin Fawcett<br>
-Writer: Pat Mills, Tony Skinner<br>
-Publisher: 1994 Marvel<br>
+<img src="BratsBizarre1.jpg"> <br>
+4 issues 1994 Marvel<br>
+Illustrators: Duke Mighten, Anthony Adhikary, Paul Scott, Colin Fawcett<br>
+Writer: Pat Mills, Tony Skinner
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BratsBizarre1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BratsBizarre2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BratsBizarre3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BratsBizarre4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 When the government attempts to cure autism, a group of super heroes is spawned instead. Unfortunately for their enemies, provoking this band of heroes doesn't result in the emotional responses you'd expect!
 </p>
 </body>
