--- a/BronxKill/BronxKill.html
+++ b/BronxKill/BronxKill.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Bronx Kill</h2>
 <img src="BronxKill.jpg"> <br>
-Series: one-shot Graphic Novel<br>
-Illustrator: James Romberger<br>
-Cover: Lee Bermejo<br>
-Writer: Peter Milligan<br>
-Publisher: 2009 Vertigo (DC)<br>
+1 issue 2009 Vertigo (DC)<br>
+Illustrator: James Romberger, Cover by Lee Bermejo<br>
+Writer: Peter Milligan
 <p>
 Being a cop was in the Keane blood. But Martin wanted to be a writer even if it meant turning his back on the family legacy. Then his wife goes missing, and Martin is forced to delve into the dark history, and darker secrets, of that same family. It's a path that will lead him back to the Bronx Kill: that lonely, godforsaken stretch of land where many years earlier his grandfather had been brutally murdered, and where finally he will learn the truth about his wife's disappearance. It's a truth more monstrous than he could ever have imagined. 
 </p>
