--- a/Brotherhood/Brotherhood.html
+++ b/Brotherhood/Brotherhood.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>the Brotherhood</h2>
 <img src="Brotherhood.jpg"> <br>
-Series: 9 issue mini-series 2001<br>
-Publisher: Marvel<br>
+9 issue mini-series 2001 Marvel
 <p>
 The dark side of the mutant war gets their own ongoing series! A MESSAGE FROM THE FRONTLINES: "Perhaps you think you know us. That costumed charlatans such as Magneto and his ilk are representative of our people. You are wrong. We are your neighbors. Your co-workers. The homeless you callously step over on your way to your safe, meaningless jobs. We will not announce ourselves with bright red uniforms or gloating public pronouncements. We will simply strike. When you see your streets run scarlet with blood, and your cities aflame, you will know your time is at an end. "You have taken our homes from us. Our families. Our future. You despoil the world we were meant to inherit, plundering the resources that rightfully belong to our children. No more... from this day forward, The Brotherhood declares open war on humanity. Its end will not come until the power to govern rests in our hands. Or until you are, once and for all, extinct." 
 </p><p>
