--- a/BruteForce/BruteForce.html
+++ b/BruteForce/BruteForce.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Brute Force</h2>
 <img src="BruteForce.jpg"> <br>
-Series: 4 issue mini series<br>
-Illustrator: Jose Delbo<br>
-Cover: Jose Delbo and Joe Sinnott<br>
-Writer: Simon Furman<br>
-Publisher: 1990 Marvel<br>
+4 issues 1990 Marvel<br>
+Illustrator: Jose Delbo, cover by Jose Delbo and Joe Sinnott<br>
+Writer: Simon Furman
 <p>
 Dr. Randall Pierce, working for the Multicorp Ecological Center, has developed the means to give human intelligence to animals using specialized exoskeletons, so that they can deal with environmental menaces; Frost, the head of Multicorp's parent company, secretly orders Pierce's process to be stolen so that he can have his own band of super-powered animals.
 </p>
