--- a/BuckDuck/BuckDuck.html
+++ b/BuckDuck/BuckDuck.html
@@ -7,14 +7,12 @@
 </head>
 
 <body>
-<h2>Buck Duck</h2>
 <img src="BuckDuck.jpg"> <br>
-Series: on-going, 4 issues<br>
+4 issues 1953 Atlas (Marvel)<br>
 Illustrator: Ed Winiarski<br>
-Writer: Stan Lee<br>
-Publisher: 1953 Atlas (Marvel)<br>
+Writer: Stan Lee
 <p>
-
+Somehow Atlas avoided getting sued by Disney for this anthropomorphic duck comedy series.
 </p>
 </body>
 </html>
