--- a/BuckRogers/BuckRogers.html
+++ b/BuckRogers/BuckRogers.html
@@ -2,18 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Buck Rogers</title>
 </head>
 
 <body>
-<h2>Buck Rogers</h2>
-<img src="BuckRogersAmazingStories.jpg"> 
-<img src="BuckRogersArm2419.jpg"> <br>
+<img src="BuckRogersAmazingStories.jpg" title="Buck Rodgers">
+ <br>
 Creator: Philip Francis Nowlan <br>
-Series: 1928 Pulp Series, Novella<br>
-Publisher: Universal<br>
+1928 Novella and Pulp Series by Amazing Stories, Radio show by CBS.<br>
+Movie Serials, 1979 Movie and TV series by Universal
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BuckRogersAmazingStories.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckRogersArm2419.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckRogersComic.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckRogersRadio.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckRogersSerial.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckRogersSerial2.jpg" title="Buster Crabbe"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckRogersMovie1979.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckRogersTV1979.jpg" title="Buster Crabbe and Gil Gerard"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Buck Rogers is a fictional space opera character created by Philip Francis Nowlan in the novella Armageddon 2419 A.D., subsequently appearing in multiple media. In Armageddon 2419 A.D., published in the August 1928 issue of the pulp magazine, Amazing Stories, the character's given name was "Anthony". A sequel, The Airlords of Han, was published in the March 1929 issue.
 </p><p>
 Philip Nowlan and the syndicate John F. Dille Company, later known as the National Newspaper Syndicate, were contracted to adapt the story into a comic strip. After Nowlan and Dille enlisted editorial cartoonist Dick Calkins as the illustrator, Nowlan adapted the first episode from Armageddon 2419, A.D. and changed the hero's name from "Anthony" to "Buck". The strip made its first newspaper appearance on January 7, 1929. Later adaptations included a film serial, a television series (in which his first name was changed from "Anthony" to "William"), and other formats.
@@ -30,8 +51,6 @@ The adventures of Buck Rogers in comic strips, movies, radio and television beca
 </p><p>
 Buck Rogers has been credited with bringing into popular media the concept of space exploration, following in the footsteps of literary pioneers such as Jules Verne, H. G. Wells and Edgar Rice Burroughs.
 </p><p>
-<img src="BuckRogersComic.jpg">
-</p><p>
 Born in 1898, Rogers is a veteran of the Great War (World War I) and by 1927 is working for the American Radioactive Gas Corporation investigating reports of unusual phenomena reported in abandoned coal mines near Wyoming Valley in Pennsylvania. On December 15, there is a cave-in while he is in one of the lower levels of a mine. Exposed to radioactive gas, Rogers falls into "a state of suspended animation, free from the ravages of catabolic processes, and without any apparent effect on physical or mental faculties". Rogers remains in suspended animation for 492 years.
 </p><p>
 Rogers awakens in 2419. Thinking that he has been asleep for just several hours, he wanders for a few days in unfamiliar forests (what had been Pennsylvania almost five centuries before). He notices someone clad in strange clothes, who is under attack. He defends the person, Wilma Deering, killing one of the attackers and scaring off the rest. On "air patrol", Deering was attacked by an enemy gang, the Bad Bloods, presumed to have allied themselves with the Hans.
@@ -44,19 +63,13 @@ In 1933, Nowlan and Calkins co-wrote Buck Rogers in the 25th Century, a novella 
 </p><p>
 In the 1960s, Nowlan's two novellas were combined by editor Donald A. Wollheim into one paperback novel, Armageddon 2419 A.D. The original 40-cent edition featured a cover by Ed Emshwiller.
 </p><p>
-<img src="BuckRogersRadio.jpg">
-</p><p>
 In 1932, the Buck Rogers radio program, notable as the first science-fiction program on radio, hit the airwaves. It was broadcast in four separate runs with varying schedules. Initially broadcast as a 15-minute show on CBS in 1932, it was on a Monday through Thursday schedule. In 1936, it moved to a Monday, Wednesday, Friday schedule and went off the air the same year. Mutual brought the show back and broadcast it three days a week from April to July 1939 and from May to July 1940, a 30-minute version was broadcast on Saturdays. From September 1946 to March 1947, Mutual aired a 15-minute version on weekdays.
 </p><p>
 A ten-minute Buck Rogers film premiered at the 1933–1934 World's Fair in Chicago. John Dille Jr. (son of strip baron John F. Dille) starred in the film, which was called Buck Rogers in the 25th Century: An Interplanetary Battle with the Tiger Men of Mars. 
 </p><p>
-<img src="BuckRogersSerial.jpg">
-</p><p>
 A 12-part Buck Rogers serial film was produced in 1939 by Universal Pictures Company. Buck Rogers (Buster Crabbe) and his young friend Buddy Wade get caught in a blizzard and are forced to crash their airship in the Arctic wastes. In order to survive until they can be rescued, they inhale their supply of Nirvano gas which puts them in a state of suspended animation. When they are eventually rescued by scientists, they learn that 500 years have passed. It is now 2440. A tyrannical dictator named Killer Kane and his henchmen now run the world. Buck and Buddy must now save the world, and they do so with the help of Lieutenant Wilma Deering and Prince Tallen of Saturn.
 </p><p>
 The first version of Buck Rogers to appear on television debuted on ABC on April 15, 1950 and ran until January 30, 1951. There were a total of 36 black and white episodes in all (allowing for a 2-month summer hiatus). Unfortunately, no episodes of the show survive today.
-</p><p>
-<img src="BuckRogersMovie1979.jpg">
 </p><p>
 Buck Rogers in the 25th Century is a 1979 American science fiction film directed by Daniel Haller. Starring Gil Gerard in the title role, it was produced by Glen A. Larson who co-wrote the screenplay with Leslie Stevens. Originally made as a television movie pilot, Universal Studios opted to release the film theatrically several months before the subsequent television series aired.
 </p><p>
