--- a/BuffyTheVampireSlayer/BuffyTheVampireSlayer.html
+++ b/BuffyTheVampireSlayer/BuffyTheVampireSlayer.html
@@ -2,28 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Buffy The Vampire Slayer</title>
 </head>
 
 <body>
-<img src="BuffyTheVampireSlayerTV.jpg"><br>
-Series: 144 episode TV series 1997. <br>
+<img src="BuffyTheVampireSlayerMovie.jpg" title="Kristy Swanson and Luke Perry"><br>
+1992 Movie and 144 episode TV series from 1997-2003 by Fox<br>
 <p>
-Buffy the Vampire Slayer is an American supernatural drama television series created by Joss Whedon under his production tag, Mutant Enemy Productions, with later co-executive producers being Jane Espenson, David Fury, David Greenwalt, Doug Petrie, Marti Noxon, and David Solomon.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BuffyTheVampireSlayerMovie.jpg" title="Kristy Swanson and Luke Perry"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuffyTheVampireSlayerMovie2.jpg" title="Kristy Swanson and Paul Rubens"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuffyTheVampireSlayerTV.jpg" title="Sarah Michelle Gellar"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuffyTheVampireSlayerComic1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuffyTheVampireSlayerComic2.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-The series premiered on March 10, 1997, on The WB and concluded on May 20, 2003, on UPN. The series narrative follows Buffy Summers (played by Sarah Michelle Gellar), the latest in a line of young women known as "Vampire Slayers", or simply "Slayers". 
+Buffy the Vampire Slayer is a 1992 American comedy horror film directed by Fran Rubel Kuzui and starring Kristy Swanson, Donald Sutherland, Paul Reubens, Rutger Hauer, Luke Perry, and Hilary Swank. It follows a Valley girl cheerleader named Buffy who learns that it is her fate to hunt vampires. The film was taken in a different direction from the one its writer Joss Whedon intended, and five years later, he created the darker and acclaimed TV series of the same name.
+</p><p>
+Buffy the Vampire Slayer television series created by Joss Whedon under his production tag, Mutant Enemy Productions, with later co-executive producers being Jane Espenson, David Fury, David Greenwalt, Doug Petrie, Marti Noxon, and David Solomon, premiered on March 10, 1997, on The WB and concluded on May 20, 2003, on UPN. The series narrative follows Buffy Summers (played by Sarah Michelle Gellar), the latest in a line of young women known as "Vampire Slayers", or simply "Slayers". 
 </p><p>
 In the story, Slayers are "called" (chosen by fate) to battle against vampires, demons, and other forces of darkness. Being a young woman, Buffy wants to live a normal life, but as the series progresses, she learns to embrace her destiny. Like previous Slayers, Buffy is aided by a Watcher, who guides, teaches, and trains her. Unlike her predecessors, Buffy surrounds herself with a circle of loyal friends who become known as the "Scooby Gang".
-</p><p>
-<img src="BuffyTheVampireSlayer.jpg"> 
-<img src="BuffyTheVampireSlayer2007.jpg"><br>
-Series: 36 issues 1998, 40 issues 2007<br>
-Publisher: Dark Horse<br>
-</p><p>
-Written by Andi Watson. Art by Joe Bennett and Rick Ketcham. Cover by Art Adams. Buffy Summers is not like other girls. She's been chosen to save the world from the vampire plague, and balancing saving the world with high school is no easy task. Presenting an all-new adventure of everyone's favorite slayer, written by Andi Watson, the creator of Skeleton Key, Joe Bennett, and Rick Ketcham, artist on Superman and Journey into Mystery.
-</p><p>
-Cover by Jo Chen. Since the destruction of the Hellmouth, the Slayers-newly legion-have gotten organized and are kicking some serious undead butt. But not everything's fun and firearms, as an old enemy reappears and Dawn experiences some serious growing pains... Buffy creator Joss Whedon brings Buffy back to Dark Horse in this direct follow-up to season seven of the smash-hit TV series. Joss Whedon writes Season 8! 
 </p>
 
 </body>
