--- a/BuckarooBanzai/BuckarooBanzai.html
+++ b/BuckarooBanzai/BuckarooBanzai.html
@@ -2,26 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Buckaroo Banzai</title>
 </head>
 
 <body>
-<img src="BuckarooBanzaiMovie.jpg">
+<img src="BuckarooBanzaiMovie.jpg"><br>
+1984 20th Century Fox
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BuckarooBanzaiMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckarooBanzaiMovie2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckarooBanzai1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckarooBanzai2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckarooBanzai3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckarooBanzai4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckarooBanzai5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckarooBanzai6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckarooBanzaiComic1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckarooBanzaiComic2.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 The Adventures of Buckaroo Banzai Across the 8th Dimension!, often shortened to Buckaroo Banzai, is a 1984 American science fiction romantic adventure comedy film directed and produced by W. D. Richter. 
 </p><p>
-The premise centers upon the efforts of the polymath Dr. Buckaroo Banzai, a physicist, neurosurgeon, test pilot, and rock musician, to save the world by defeating a band of inter-dimensional aliens called Red Lectroids from Planet 10. The film is a cross between the action/adventure and sci-fi film genres and also includes elements of comedy, satire, and romance. 20the Century Fox.
-</p><p>
-<img src="BuckarooBanzai.jpg"> <img src="BuckarooBanzai2.jpg"> <br>
-Series: 2 issue movie adaptation<br>
-Illustrator: Mark Texeira, Armando Gill<br>
-Writer: Bill Mantlo<br>
-Publisher: 1984 Marvel<br>
-<p>
-The official comics adaptation of the spectacular film starring Peter Weller and John Lithgow. 
-</p><p>
-Buckaroo Banzai. noted physicist, neurosurgeon, psychologist, poet, musician, and his motley band of heroes race against the clock to stop an inter-dimensional invasion of Earth.
+The premise centers upon the efforts of the polymath Dr. Buckaroo Banzai, a physicist, neurosurgeon, test pilot, and rock musician, to save the world by defeating a band of inter-dimensional aliens called Red Lectroids from Planet 10. The film is a cross between the action/adventure and sci-fi film genres and also includes elements of comedy, satire, and romance.
 </p>
+
 </body>
 </html>
