--- a/Bullseye/Bullseye.html
+++ b/Bullseye/Bullseye.html
@@ -7,13 +7,11 @@
 </head>
 
 <body>
-<h2>Bullseye</h2>
 <img src="Bullseye.jpg"> <br>
-Series: 5 issue mini series<br>
+5 issues 2004 Marvel<br>
 Illustrator: Steve Dillon <br>
 Cover: Mike Deodato Jr.<br>
-Writer: Daniel Way<br>
-Publisher: 2004 Marvel<br>
+Writer: Daniel Way
 <p>
 The untold origin of Daredevil's ultimate nemesis is revealed at last! And who thought being bad could be so much fun? Featuring timely cameos by Daredevil, Elektra, the Kingpin and the Punisher!
 </p>
