--- a/Bullwinkle/Bullwinkle.html
+++ b/Bullwinkle/Bullwinkle.html
@@ -2,19 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
-<title>Bullwinkel</title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>The Adventures of Rocky and Bullwinkle and Friends </title>
 </head>
 
 <body>
-<h2>Bullwinkle</h2>
-<img src="Bullwinkle1962.jpg"> 
-<img src="Bullwinkle1970.jpg"> 
-<img src="Bullwinkle1987.jpg"> <br>
-Series: on-going, TV series adaptation, 21 issues<br>
-Publisher: 1962 Dell Goldkey, 1970 Charlton<br>
+<img src="Bullwinkle1.jpg"> <br>
+Animated TV series from 1959-1961 ABC, 1961-1964 NBC.<br>
+21 issue comic book series by Dell Goldkey and Charlton
 <p>
-GoldKey #1: Comic book adventures of the cult classic cartoon show "Rocky and His Friends" which originally aired in the late 1950s and early 1960s. Back cover has pin-up of front cover illustration. Inside front cover promotes the characters and stories in this issue. Rocky and Bullwinkle in "Strictly for the Birds" and "Star Billing." Issue also has Dudley Do-Right in "Frozen Feud," a Fractured Fairy Tale" of the Ugly Duckling, Peabody's Improbably History in "Horsing Around," one-page text feature "Ridiculous Isn't It?" and one-page strips. No story/art credits given.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Bullwinkle1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bullwinkle2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bullwinkle3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bullwinkle4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bullwinkle5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bullwinkle1962.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bullwinkle1970.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bullwinkle1987.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+GoldKey #1: Comic book adventures of the cult classic cartoon show "Rocky and Bullwinkel and His Friends" which originally aired in the late 1950s and early 1960s. Back cover has pin-up of front cover illustration. Inside front cover promotes the characters and stories in this issue. Rocky and Bullwinkle in "Strictly for the Birds" and "Star Billing." Issue also has Dudley Do-Right in "Frozen Feud," a Fractured Fairy Tale" of the Ugly Duckling, Peabody's Improbably History in "Horsing Around," one-page text feature "Ridiculous Isn't It?" and one-page strips. No story/art credits given.
 </p><p>
 Charlton #1: They Lost Their Marbles; An ancient tomb has been reassembled in a museum, but two assistants and valuable jewels are missing; Could two agents of a foreign power be involved? I'll String Along With You; Bullwinkle flies a kite and while he and Rocky are airborne, he bumps into some fiendish friends. Bullwinkle and Rocky Pin-Up Page. The Wayward Inventors starring Bunsun and Burner. The Same Routine!; Boris dreams of getting rid of moose and squirrel.
 </p><p>
