--- a/Cable/Cable.html
+++ b/Cable/Cable.html
@@ -2,22 +2,31 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Cable</title>
 </head>
 
 <body>
-<h2>Cable</h2>
-<img src="Cable.jpg"> 
-<img src="Cable2008.jpg"> 
-<img src="Cable2017.jpg"> 
- <br>
-Series: on-going <br>
-Illustrator: Art Thibert<br>
-Cover: (gold foil) Art Thibert<br>
-Writer: Fabian Nicieza<br>
-Publisher: 1993 Marvel <br>
+<img src="Cable.jpg"><br>
+107 issues 1993-2002 Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Cable.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Cable2008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Cable2017.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 First series 1993-2002 for 107 issues, second series 2008 for 25 issues, third series 2017 fourth series 2017 started #1-5, then jumped to #150 restoring original numbering.
 </p><p>
 1993 #1: Rocks and Waves.<br> Kane is stranded in Cable's future and learns all he can about the mysterious Askani leader. Cable returns and informs the Clan Chosen that they must destroy a time displacement machine located in Niagra Falls. Kane has hopes that the machine can send him home before it is destroyed.
