--- a/CableAndDeadpool/CableAndDeadpool.html
+++ b/CableAndDeadpool/CableAndDeadpool.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Cable And Deadpool</h2>
 <img src="CableAndDeadpool.jpg"> <br>
-Series: on-going, 50 issues<br>
-Illustrator: Mark Brooks<br>
-Cover: Rob Liefeld<br>
-Writer: Fabian Nicieza<br>
-Publisher: 2004 Marvel<br>
+50 issues 2005 Marvel<br>
+Illustrator: Mark Brooks, Cover: Rob Liefeld<br>
+Writer: Fabian Nicieza
 <p>
 Wade Wilson and Nathan Summers are back, and this time, they're stuck with each other! Can two grown men with deadly genetic weaponry work together without driving each other crazy?! 
 </p><p>
