--- a/BulletPoints/BulletPoints.html
+++ b/BulletPoints/BulletPoints.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Bullet Points</h2>
 <img src="BulletPoints.jpg"> <br>
-Series: 5 issue mini series<br>
+5 issues 2007 Marvel<br>
 Illustrator: Tommy Lee Edwards<br>
 Writer: Michael Straczynski<br>
-Publisher: 2007 Marvel<br>
 <p>
 World War II. America needs a super soldier. Only one man possesses the formula to create the perfect fighting machine from volunteer Steve Rogers. But when a deadly bullet kills Dr. Erskine along with his bodyguard, M.P. Ben Parker, Steve's destiny-and that of the Marvel Universe-is changed forever.
 </p>
