--- a/CableAndXForce/CableAndXForce.html
+++ b/CableAndXForce/CableAndXForce.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Cable And X-Force</h2>
 <img src="CableAndXForce.jpg"> <br>
-Series: on-going, 19 issues<br>
-Illustrator: Salvador Larroca<br>
-Writer: Dennis Hopeless<br>
-Publisher: 2012-2014 Marvel<br>
+19 issues 2012-2014 Marvel<br>
+Illustrator: Salvador Larroca, Writer: Dennis Hopeless
 <p>
 Cable is back! NOW! with a new X-Force at his side, he must tackle the threats that nobody else can know about. But just who are Cable's new recruits, and why is his team public enemy number one? Caught red-handed at the scene of a terrorist attack on a major American corporation whose CEO has expressed anti-mutant views, the X-Force is the run, with none other than the Uncanny Avengers in hot pursuit.
 </p>
