--- a/CadillacsAndDinosaurs/CadillacsAndDinosaurs.html
+++ b/CadillacsAndDinosaurs/CadillacsAndDinosaurs.html
@@ -2,23 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Cadillacs And Dinosaurs</title>
 </head>
 
 <body>
-<h2>Cadillacs And Dinosaurs</h2>
-<img src="CadillacsAndDinosaurs1.jpg">
-<img src="CadillacsAndDinosaurs2.jpg">
-<img src="CadillacsAndDinosaurs3.jpg">
-<img src="CadillacsAndDinosaurs4.jpg">
-<img src="CadillacsAndDinosaurs5.jpg">
-<img src="CadillacsAndDinosaurs6.jpg"> <br>
-Series: on-going, 6 issues<br>
-Illustrator: Mark Schultz<br>
-Writer: Mark Schultz<br>
-Publisher: 1990 Marvel<br>
+<img src="CadillacsAndDinosaurs1.jpg"><br>
+6 issues 1990 Epic (Marvel)<br>
+Created by Mark Schultz
 <p>
+
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="CadillacsAndDinosaurs1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CadillacsAndDinosaurs2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CadillacsAndDinosaurs3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CadillacsAndDinosaurs4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CadillacsAndDinosaurs5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CadillacsAndDinosaurs6.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Just when the human race thinks it's in charge, Mother Earth sends earthquakes, tidal waves and volcanoes to push civilization back to the age of dinosaurs. But Jack Tenrec salvages a real prize - a classic Cadillac. Jack and the beautiful (and dangerous) Hannah Dundee begin their full color adventures in the future age of dinosaurs. Mark Schultz's fast and furious future fantasy originally appeared in black and white as Kitchen Sink's award-winning Xenozoic Tales.
 </p>
 </body>
